# advent_of_code_2022

./: .gitignore  Cargo.toml  Makefile
2022/src/: day5.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs
