# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.1"                                 # itertools utils
clap = { version = "4.0.32", features = ["derive"] } # CLI arg parse
range-set = "0.0.9"
regex = "1.7.0"
